fixes for typo mis-fixes

--- a/posts/2017-08-21.md
+++ b/posts/2017-08-21.md
@@ -131,7 +131,7 @@ The edge changes flowing around will have type `((usize, usize), i64)` and the r
 
 Because we may be running with multiple workers, we'll want to shuffle each stream so that changes to the same source arrive at the same worker. To shuffle data between workers we could use the `exchange` operator. It doesn't change the logical contents of the stream, but it does move the records between workers based on a supplied function (from record to integer; we would just pick out the first field). Another way to exchange data is, as part of building a new operator we can specify how its inputs must be shuffled for the operator to be correct. We are going to do that instead.
 
-Our plan is to build a binary operator, taking both `edge_stream` and `rank_stream` as input. I'm going to beat down the skeleton of such an operator now, using one of timely dataflow's generic binary operators, `binary_frontier`.
+Our plan is to build a binary operator, taking both `edge_stream` and `rank_stream` as input. I'm going to blat down the skeleton of such an operator now, using one of timely dataflow's generic binary operators, `binary_frontier`.
 
 ```rust
 worker.dataflow(|scope| {
