--- a/posts/2017-09-23.md
+++ b/posts/2017-09-23.md
@@ -299,4 +299,4 @@ Carlo Curino tells me that the database community prioritizes "novelty", and ind
 
 ![Novelty](https://github.com/frankmcsherry/blog/blob/master/assets/databases/novelty.png)
 
-While I wasn't expecting it, and I don't know who H. M. Jones is, that quote that sums up my feelings pretty well.
+While I wasn't expecting it, and I don't know who H. M. Jones is, that quote thar sums up my feelings pretty well.
