add noisy figure

--- a/posts/2018-03-11.md
+++ b/posts/2018-03-11.md
@@ -161,7 +161,9 @@ I've taken a small graph I happen to have, `mico.txt`, and I'm treating its edge
 
 Let's take a look (using epsilon = 0.1 differential privacy):
 
-This picture is a bit of a mess. What I've plotted is 1,000 noise measurements corresponding to each of those multiplicities we measured up above, as well as the "truth" as a solid line behind the measurements.
+![Shave](https://github.com/frankmcsherry/blog/blob/master/assets/cdfs/shave-1.png)
+
+This picture is a bit of a mess. What I've plotted is 1,000 noise measurements corresponding to each of those multiplicities we measured up above, as well as the "truth" as a solid line behind the measurements. It is a bit hard to see the solid line other than in the tail where the noise is pretty crazy.
 
 Although you can't really see it well in the figure, we've really nailed the high-count measurements. Let's walk through multiplicities one through ten, and compare the noisy measurement and the truth:
 
