--- a/posts/2018-05-19.md
+++ b/posts/2018-05-19.md
@@ -1,8 +1,8 @@
 ## A relatively simple Datalog engine
 
-In this post we will build up a relatively concise [Datalog]() engine.
+In this post we will build up a relatively concise [Datalog](https://en.wikipedia.org/wiki/Datalog) engine: [DataFrog](https://github.com/frankmcsherry/datafrog).
 
-I initially wrote "simple", and I think that is nearly the case, but I'll have to let you be the judge. One of the design goals is that simple or not, there should be little enough cruft in the way of someone coming to understand how it all works, with enough time.
+I initially wrote "simple", and I think that is nearly the case, but I'll have to let you be the judge. One of the design goals is that simple or not, there should be little enough in the way of someone coming to understand how it all works, with enough time. No complicated runtime, or weird abstractions and such. Or, less weird, anyhow.
 
 ### Datalog
 
@@ -90,11 +90,11 @@ pub struct Variable<Tuple: Ord> {
 
 In this type tuples can be found in one of three places.
 
-    1.  A new tuple is first added to the `self.to_add` list, which indicates that we think the tuple should be in the relation that the variable represents. This list is mostly a "to-do" list, and we aren't going to look at its contents other than to add tuples.
+1.  A new tuple is first added to the `self.to_add` list, which indicates that we think the tuple should be in the relation that the variable represents. This list is mostly a "to-do" list, and we aren't going to look at its contents other than to add tuples.
 
-    2.  Tuples in the `to_add` list are eventually promoted to the `self.recent` relation, if it turns out that they are novel (they haven't already been added to the variable). The `recent` relation contains those tuples that have just been admitted, and should be re-considered by each of the rules that we might apply.
+2.  Tuples in the `to_add` list are eventually promoted to the `self.recent` relation, if it turns out that they are novel (they haven't already been added to the variable). The `recent` relation contains those tuples that have just been admitted, and should be re-considered by each of the rules that we might apply.
 
-    3.  Once they have been considered by all rules, recent tuples are moved into `self.stable`, which contains the full list of processed tuples. As we will see, some rules will want access to even old tuples, and so we will want to keep them around, even if they are not driving new rule applications.
+3.  Once they have been considered by all rules, recent tuples are moved into `self.stable`, which contains the full list of processed tuples. As we will see, some rules will want access to even old tuples, and so we will want to keep them around, even if they are not driving new rule applications.
 
 Our rules will be able to look at a `Variable` and see which tuples are new and should be reacted to (`self.recent`), if needed consult tuples that already exist (`self.stable`), and totally ignore tuples that may be added in the next iteration (`self.to_add`).
 
@@ -125,10 +125,10 @@ We also aren't exactly sure what to do with matches yet, so let's leave that ope
 Here is a prototype for the method:
 
 ```rust
-fn join_helper<Key: Ord, Val1, Val2, F: FnMut(&Key, &Val1, &Val2)>(
+fn join_helper<Key: Ord, Val1, Val2>(
     input1: &Relation<(Key,Val1)>,
     input2: &Relation<(Key,Val2)>,
-    mut result: F) {
+    mut result: impl FnMut(&Key, &Val1, &Val2)) {
 
     // do some stuff probably.
 
@@ -180,7 +180,7 @@ To march through the relations, we will recast them as "slices", which is how Ru
 I think a lot of this makes sense, except for the part where I call `gallop`. You probably don't know what that method does, but roughly it slides forward through its first argument until the second argument (a predicate) is no longer true. Instead of doing this one element at a time, it repeatedly doubles its step size until it finds a violation, and then repeatedly halves the step size until it is right up against the limit. For completeness, it looks like this:
 
 ```rust
-pub fn gallop<T, F: Fn(&T)->bool>(mut slice: &[T], cmp: F) -> &[T] {
+pub fn gallop<T>(mut slice: &[T], mut cmp: impl FnMut(&T)->bool) -> &[T] {
     // if empty slice, or already >= element, return
     if slice.len() > 0 && cmp(&slice[0]) {
         let mut step = 1;
@@ -219,11 +219,11 @@ Let's write a method that takes two input variables and adds new results to an o
 Remember that `stable` contains a list of relations, so we need to swing through each of them.
 
 ```rust
-pub fn join_into<Key: Ord, Val1: Ord, Val2: Ord, Result: Ord, F: Fn(&Key, &Val1, &Val2)->Result>(
+pub fn join_into<Key: Ord, Val1: Ord, Val2: Ord, Result: Ord>(
     input1: &Variable<(Key, Val1)>,
     input2: &Variable<(Key, Val2)>,
     output: &mut Variable<Result>,
-    logic: F) {
+    mut logic: impl FnMut(&Key, &Val1, &Val2)->Result) {
 
     let mut results = Vec::new();
 
@@ -320,13 +320,13 @@ Ok, actually there are a bunch of other things. For various ergonomic reasons, s
 
 There are also several places that I lied about the implementations, in that I actually wrote something a bit more complicated in the interest of performance (e.g. `Relation::merge()`). These do make the code work a bit better, but you should get just fine performance without them (a few more copies in the case of `merge()`).
 
-You can check out the repository to see the real story, but the presented structure is roughly accurate, I think.
+You can check out [the DataFrog repository](https://github.com/frankmcsherry/datafrog) to see the real story, but the presented structure is roughly accurate, I think.
 
 ### An example
 
 Let's write an example!
 
-This example is from our `nodes` and `edges` example up above, but actually applied to a real problem. At least, there was [a real paper published in ASPLOS 2017]() that used this as one of their benchmark computations. We are going to reproduce their results!
+This example is from our `nodes` and `edges` example up above, but actually applied to a real problem. At least, there was a paper published in ASPLOS 2017 that used this as one of their benchmark computations. We are going to reproduce their results!
 
 ```rust
 extern crate datafrog;
