--- a/posts/2018-05-19.md
+++ b/posts/2018-05-19.md
@@ -4,6 +4,12 @@ In this post we will build up a relatively concise [Datalog](https://en.wikipedi
 
 I initially wrote "simple", and I think that is nearly the case, but I'll have to let you be the judge. One of the design goals is that simple or not, there should be little enough in the way of someone coming to understand how it all works, with enough time. No complicated runtime, or weird abstractions and such. Or, less weird, anyhow.
 
+### Acks
+
+This project got put together rather suddenly, in response to [some work the Rust folks are doing](https://github.com/rust-lang-nursery/polonius/pull/36#issuecomment-390393717) on their new and improved borrow checker. They had been using [differential dataflow](https://github.com/frankmcsherry/differential-dataflow), which was super brave of them, but it seemed like a more stream-lined Datalog implementation might suit them better for now.
+
+Thanks go out to [@lqd](https://twitter.com/lqd), [@nikomatsakis](https://twitter.com/nikomatsakis), and [@qmx](https://twitter.com/qmx) for moving things along (and testing, and listening, and explaining how it could be better, etc).
+
 ### Datalog
 
 Datalog is a recently re-popularized language from decades backs, in which you start with a few collections of "tuples", often called "facts" in Datalog, and repeatedly apply a set of rules that derive new tuples from existing tuples. These rules all have a restricted form, where you can insist that some tuple values in different collections be the same, and only when they match do they produce a new tuple.
