--- a/posts/2018-05-19.md
+++ b/posts/2018-05-19.md
@@ -61,7 +61,7 @@ This implementation will allow us to use not only vectors, but also other iterat
 
 In the interest of completeness, we will have one more method for the `Relation` type, a method `merge` that consumes two relations and produces their union:
 
-```
+```rust
 impl<Tuple: Ord> Relation<Tuple> {
     /// Merges two relations into their union.
     pub fn merge(self, other: Self) -> Self {
