--- a/posts/2018-05-19.md
+++ b/posts/2018-05-19.md
@@ -52,6 +52,7 @@ impl<Tuple: Ord, I: IntoIterator<Item=Tuple>> From<I> for Relation<Tuple> {
     fn from(iterator: I) -> Self {
         let mut elements: Vec<Tuple> = iterator.into_iter().collect();
         elements.sort_unstable();
+        elements.dedup();
         Relation { elements }
     }
 }
