Fix link and rust code block

--- a/posts/2015-04-07.md
+++ b/posts/2015-04-07.md
@@ -1,6 +1,6 @@
 I'm now in Berlin, working on [timely dataflow in Rust](https://github.com/frankmcsherry/timely-dataflow). It is up and running, multiple processes and all, so the next step is to get some experience using it to point out performance and usability issues. Unfortunately, at the moment there is a Rust internal compiler error preventing me from doing this, so I'm going to write a bit about some of the applications!
 
-Differential dataflow is an approach to doing incremental data-parallel computation that several of us [introduced at CIDR 2013](http://www.cidrdb.org/cidr2013/Papers/CIDR13_Paper111.pdf). I'll work through the details, but the rough idea is rather than have a point in the computation (a dataflow vertex) maintain a dataset, it maintains a collection of differences from which the data can be efficiently updated. If this sounds a bit like incremental dataflow computation, it is, and differential dataflow can be viewed as a generalization of existing techniques from incremental dataflow computation to dataflow graphs with possibly nested iteration.
+Differential dataflow is an approach to doing incremental data-parallel computation that several of us [introduced at CIDR 2013](http://cidrdb.org/cidr2013/Papers/CIDR13_Paper111.pdf). I'll work through the details, but the rough idea is rather than have a point in the computation (a dataflow vertex) maintain a dataset, it maintains a collection of differences from which the data can be efficiently updated. If this sounds a bit like incremental dataflow computation, it is, and differential dataflow can be viewed as a generalization of existing techniques from incremental dataflow computation to dataflow graphs with possibly nested iteration.
 
 ## Setting
 
@@ -125,7 +125,7 @@ trait Difference<T, V> {
     fn setd(&mut self, index: T, data: &mut Vec<(V, i64)>);
     fn getd(&self, index: &T) -> &[(V, i64)];
 }
-```rust
+```
 
 In the `Difference` trait, the `setd` method just internalizes the supplied vector of updates and the `getd` method just returns the slice corresponding to the requested index.
 
