--- a/posts/2018-05-19.md
+++ b/posts/2018-05-19.md
@@ -392,3 +392,270 @@ Ergonomics seem to be a bit of a pain here. If you want to have more complicated
 I would expect the ergonomics might improve in the future, as some folks do seem interested in using this in anger. The more eyeballs we get on it, and elbows applied to it, the better I see it getting.
 
 If nothing else, I hope it is an informative and educational tool about how you too could totally build a Datalog engine. If there are any parts you still aren't confident about, give a holler and I can try and clarify out those aspects.
+
+### Addendum 2018-05-21: Treefrog Leapjoin
+
+The Rust folks have a benchmark query they are interested in, related to a more sophisticated set of rules for their borrow checker (the part of Rust that does the static analysis on your program to see if it can rule out racy memory references). It is a lot more complicated than
+
+    nodes(y) <- nodes(x), edges(x,y)
+
+If you take the naive form of their analysis, the rules look like
+
+    subset(R1, R2, P) <- outlives(R1, R2, P).
+    subset(R1, R3, P) <- subset(R1, R2, P), subset(R2, R3, P).
+    subset(R1, R2, Q) <- subset(R1, R2, P), cfg_edge(P, Q), region_live_at(R1, Q), region_live_at(R2, Q).
+
+    requires(R, B, P) <- borrow_region(R, B, P).
+    requires(R2, B, P) <- requires(R1, B, P), subset(R1, R2, P).
+    requires(R, B, Q) <- requires(R, B, P), !killed(B, P), cfg_edge(P, Q), region_live_at(R, Q).
+
+    borrow_live_at(B, P) <- requires(R, B, P), region_live_at(R, P)
+
+The current bestest form of the analysis does not use these simple rules, but we will be able to do something instructive with them nonetheless. Let's focus on the rule
+
+    subset(R1, R2, Q) <- subset(R1, R2, P), cfg_edge(P, Q), region_live_at(R1, Q), region_live_at(R2, Q).
+
+This rule happens to extend the `subset` relation with a new value `Q` by joining with three other relations. All of that work and we just get one additional `Q` out of it (and we discard the `P`). Let's see how it is written using the relatively simple framework up above:
+
+```rust
+    // subset_1 and subset_2 are temporary relations; subset_p is the real deal.
+    subset_1.from_join(&subset_p, &cfg, |&_p, &(r1, r2), &q| ((r1, q), r2));
+    subset_2.from_join(&subset_1, &rla, |&(r1, q), &r2, &()| ((r2, q), r1));
+    subset_p.from_join(&subset_2, &rla, |&(r2, q), &r1, &()| (q, (r1, r2)));
+```
+
+This isn't the whole story for the computation, but the fragment shows us that we start with a `subset_p` relation that we join with a `cfg`, then twice with `rla`. The `subset_p` relation is `subset` indexed by `P`, so that a join with `cfg` adds in a `Q` field; we then join twice with the `(R,Q)` tuples in `rla` to restrict to tuples where both `(R1,Q)` and `(R2,Q)` are in `rla`.
+
+For each `(r1, r2, p)` we are doing a fair bit of work just to get out the new `q` values. The `cfg` relation proposes them all, we then write them all down and re-order so that `rla` can test each of them, twice. Is there perhaps a better way?
+
+#### The Treefrog Awakens
+
+There is a neat algorithm called ["leapfrog triejoin"](https://arxiv.org/pdf/1210.0481v5.pdf), the intellectual property of LogicBlox, Inc. The algorithm we are going to develop, "treefrog leapjoin", may seem similar, but it is a purely superficial connection. They are both connected to the study of [worst-case optimal joins](https://cs.stanford.edu/people/chrismre/papers/paper49.Ngo.pdf), and I think TFLJ is something of a dual to LFTJ.
+
+I should also stress that while the name itself is novel, TFLJ the algorithm is not; it's totally just out of that WCOJ paper up there.
+
+Here is the rough idea:
+
+Imagine that someone provides us with a tuple `(r1, r2, p)` and asks for the list of `q` that should extend it. We have a few relations (`cfg`, `rla`, and `rla` again) that have opinions on which `q` should extend it, so let's maybe as them.
+
+Imagine each relation had a method
+
+```rust
+    fn propose(&self, tuple: &Tuple) -> Vec<Q>;
+```
+
+that would tell us what values it would propose for any instance of `Tuple`. We could take these lists and intersect them, and then list out the matching `q` values all in one fell swoop. No intermediate `subset_1` and `subset_2` relations, no sorting them by different keys or anything like that.
+
+It is pretty easy to write a `propose` method like the above, beause for any `tuple: &Tuple` each relation just needs to know how to pick out the fields of `tuple` that are bound to non-`Q` variables in the relation. For example, `cfg` needs to be smart enough to pick out the `P` and then use it to look up `Q` values. Each of the uses of `rla` need to pick out either `R1` or `R2` (based on which use it is) and use it to look up `Q` values.
+
+The relation itself will not be able to do this, which we can see from the two uses of `rla` which must do different things. Instead, we can *wrap* the relation in some type that will provide the logic we need perhaps just by associating a `Fn(&Tuple)->Key` function which extracts the relation's key from any supplied tuple.
+
+```rust
+    pub struct ExtendWith<'a, Key: Ord+'a, Val: Ord+'a, Tuple: Ord, Func: Fn(&Tuple)->Key> {
+        relation: &'a Relation<(Key, Val)>,
+        key_func: Func,
+        phantom: ::std::marker::PhantomData<Tuple>,
+    }
+```
+
+If you are still pondering Rust and all of its idosyncracies, there might be a bit to digest here. This type has several parameters, including the mysteriously ominous `'a` parameter. You can approximately view this struct as pairing a reference to a `Relation<(Key, Val)>` with a specific function `Fn(&Tuple)->Key`. The `'a` parameter is Rust's way of acknowledging that while this reference may not be around forever, when we talk about other references to things perhaps we can say that they will be around for roughly as long.
+
+Here is a `propose()` method for `ExtendWith` (where we apparently populate a `Vec<&'a Val>` instead of returning one).
+
+```rust
+    fn propose(&mut self, prefix: &Tuple) -> Vec<&'a Val> {
+        let key = (self.key_func)(prefix);
+        let start = binary_search(&self.relation[..], |x| &x.0 < &key);
+        let slice = &self.relation[self.start ..];
+        let end = slice.len() - gallop(slice, |x| &x.0 <= &key).len();
+        slice[start .. end].iter().map(|&(_, ref val)| val).collect()
+    }
+```
+
+This would probably work pretty well, using `propose` for each relation wrapped with an `ExtendWith`, but we are going to do something a bit smarter and more flexible.
+
+#### Enter the Treefrog
+
+The `propose` method is a solid way to start out eliciting information from each of the participating relations, but we can do a bit better. Imagine that each participating relation provided three methods:
+
+```rust
+    /// Methods to support treefrog leapjoin.
+    pub trait Leaper<'a, Tuple, Val> {
+        /// Estimates the number of proposed values.
+        fn count(&mut self, prefix: &Tuple) -> usize;
+        /// Populates `values` with proposed values.
+        fn propose(&mut self, prefix: &Tuple, values: &mut Vec<&'a Val>);
+        /// Restricts `values` to proposed values.
+        fn intersect(&mut self, prefix: &Tuple, values: &mut Vec<&'a Val>);
+    }
+```
+
+The `propose` method is familiar, if slightly different, but what do the other two methods do? The `count` method estimates a number of values that would be proposed, and just needs to avoid being zero if the relation would actually propose some values. The `intersect` method takes a list of proposed values and restricts them down to those that the relation would propose; this can be a lot more efficient than actually proposing the values themselves (imagine a small `values` and a large list of proposals).
+
+Using just this trait, let's write a `leapjoin_into` method that extends any `Variable<Tuple>` using a list of these `Leaper` implementors:
+
+```rust
+/// Performs treefrog leapjoin using a list of leapers.
+pub fn leapjoin_into<'a, Tuple: Ord, Val: Ord+'a, Result: Ord>(
+    source: &Variable<Tuple>,
+    leapers: &mut [&mut Leaper<'a, Tuple, Val>],
+    output: &Variable<Result>,
+    mut logic: impl FnMut(&Tuple, &Val)->Result) {
+
+    let mut result = Vec::new();    // temp output storage.
+    let mut values = Vec::new();    // temp value storage.
+
+    for tuple in source.recent.borrow().iter() {
+
+        // 1. Determine which leaper would propose the fewest values.
+        // 2. Have the least-proposing leaper propose their values.
+        // 3. Have the other leapers restrict the proposals.
+        // 4. Call `logic` on each value, push into `result`.
+
+    }
+
+    output.insert(result.into());
+}
+```
+
+These four steps are not so complicated, I just wanted to avoid a wall of text. Let's look at each of them individually:
+
+```rust
+        // 1. Determine which leaper would propose the fewest values.
+        let mut min_index = usize::max_value();
+        let mut min_count = usize::max_value();
+        for index in 0 .. leapers.len() {
+            let count = leapers[index].count(tuple);
+            if min_count > count {
+                min_count = count;
+                min_index = index;
+            }
+        }
+```
+
+Great! Super easy. We just ask each leaper, and they tell us. The rest is pretty easy too:
+
+```rust
+        if min_count > 0 {
+
+            // 2. Have the least-proposing leaper propose their values.
+            leapers[min_index].propose(tuple, &mut values);
+
+            // 3. Have the other leapers restrict the proposals.
+            for index in 0 .. leapers.len() {
+                if index != min_index {
+                    leapers[index].intersect(tuple, &mut values);
+                }
+            }
+
+            // 4. Call `logic` on each value, push into `result`.
+            for val in values.drain(..) {
+                result.push(logic(tuple, val));
+            }
+        }
+```
+
+That is the whole `leapjoin_into` implementation!
+
+#### Other flavors of TreeFrog
+
+While one of the reasons for the three methods (`count`, `propose`, and `intersect`) is efficiency, another is flexibility. To see what this is about, let's consider an query fragment from Rust's "more optimized" version of their borrow checker logic.
+
+    dead_region_requires(R, B, P, Q) :-
+        requires(R, B, P),
+        !killed(B, P),
+        cfg_edge(P, Q),
+        !region_live_at(R, Q).
+
+This method starts with triples `(r, b, p)` from the `requires` variable, and does various restrictions to introduce a new `q`.
+
+However, these constraints aren't just a matter of *proposing* values for `q`. The `!killed(B, P)` constraint says that *no* `q` are appropriate for any `(b, p)` in `killed`. The `!rla(R, Q)` says that only `q` *not* present in `rla` are appropriate.
+
+These two negative constraints would be very hard to write in terms of `propose`. We can't list out the values that would be satisfactory, because there could be an unbounded number of them. When `(b, p)` is not in `killed`, literally any value of `q` is just fine. The `rla` relation would have to list the values *not* associated with `r`, which while not *any* value of `q` are still most of them.
+
+Fortunately, even for these two classes of constraint we can implement the `Leaper` trait, with methods
+
+```rust
+    fn count(&mut self, prefix: &Tuple) -> usize;
+    fn propose(&mut self, prefix: &Tuple, values: &mut Vec<&'a Val>);
+    fn intersect(&mut self, prefix: &Tuple, values: &mut Vec<&'a Val>);
+```
+
+A bit of pondering, and you may conclude that you can implement each of these methods for the two types of constraints above. Where we called our first `Leaper` type `ExtendWith`, I'm going to call these two `FilterAnti` and `ExtendAnti` for the `killed` and `rla` uses respectively.
+
+The `FilterAnti` implementation should report a count of either `0` or `usize::max_value()`, depending on whether the tuple's key and value are present in the relation or not. It is welcome to panic in its `propose` implementation (something has gone wrong if we are there), and its `intersect` implementation can be empty (we could only be there if we reported a count of `usize::max_value()`).
+
+The `ExtendAnti` implementation shourd report a count of `usize::max_value()`, panic in `propose()`, and perform roughly the same logic for `intersect` as does `ExtendWith` but complementing its decisions (retaining elements when they are absent from the relation).
+
+Notice that it is important that `leapjoin_into()` does nothing when a `min_count` of zero comes back. That is a lot cheaper than asking the `FilterAnti` and `ExtendAnti` wrappers to double check that the tuple is absent and propose nothing.
+
+#### Consequences
+
+Let's check out the performance implications on [Rust's prototype borrow checker](https://github.com/rust-lang-nursery/polonius/).
+
+We can grab and run the current version (which uses DataFrog, but not the treefrog leapjoin):
+
+    Echidnatron% git clone https://github.com/rust-lang-nursery/polonius/
+    Echidnatron% cd polonius
+    Echidnatron% cargo +nightly run --release -- -a DatafrogOpt inputs/clap-rs/app-parser-{{impl}}-add_defaults/ --skip-tuples
+    ...
+    Time: 7.692s
+    Echidnatron%
+
+Before getting too excited, we should update `Cargo.toml` to point at the current [datafrog master](https://github.com/frankmcsherry/datafrog), which has [some recent improvements](https://github.com/frankmcsherry/datafrog/pull/2).
+
+    Echidnatron% cargo +nightly run --release -- -a DatafrogOpt inputs/clap-rs/app-parser-{{impl}}-add_defaults/ --skip-tuples
+    ...
+    Time: 6.985s
+    Echidnatron%
+
+Now let's do a bit of editing in `datafrog_opt.rs`, which is where their logic lives. I went and did this by hand, and it's not pretty (but arguably not less pretty than before). You end up with a bunch of code that looks like
+
+```rust
+    // dead_region_requires((R, P, Q), B) :-
+    //   requires(R, B, P),
+    //   !killed(B, P),
+    //   cfg_edge(P, Q),
+    //   !region_live_at(R, Q).
+    leapjoin_into(
+        &requires_rp,           // dynamic source
+        &mut [
+            &mut killed.filter_anti(|&((_r,p),b)| (b,p)),
+            &mut cfg_edge_rel.extend_with(|&((_r,p),_b)| p),
+            &mut region_live_at_rel.extend_anti(|&((r,_p),_b)| r),
+        ],
+        &dead_region_requires,  // destination
+        |&((r,p),b),&q| ((r,p,q),b));
+```
+
+instead of
+
+```rust
+    // dead_region_requires((R, P, Q), B) :-
+    //   requires(R, B, P),
+    //   !killed(B, P),
+    //   cfg_edge(P, Q),
+    //   !region_live_at(R, Q).
+    dead_region_requires_1.from_antijoin(&requires_bp, &killed, |&(b, p), &r| (p, (b, r)));
+    dead_region_requires_2.from_join(
+        &dead_region_requires_1,
+        &cfg_edge_p,
+        |&p, &(b, r), &q| ((r, q), (b, p)),
+    );
+    dead_region_requires.from_antijoin(
+        &dead_region_requires_2,
+        &region_live_at_rel,
+        |&(r, q), &(b, p)| ((r, p, q), b),
+    );
+```
+
+In any case, you also end up improving the time from 6.985 seconds to
+
+    Echidnatron% cargo +nightly run --release -- -a DatafrogOpt inputs/clap-rs/app-parser-{{impl}}-add_defaults/ --skip-tuples
+    ...
+    Time: 5.275s
+    Echidnatron%
+
+This isn't the world's greatest speed-up, but it is pretty solid. There are also several further avenues to explore, including better ways to perform intersection (right now we always use `gallop`) and replacing `Vec<&'a Val>` lists of pointers with just `Vec<Val>` because all of our `Val` types are just integers.
+
+For *our* purposes, we have learned a bit more about how to implement clever join strategies, while additionally supporting various flavors of negative constraints (though only in static relations, rather than variables).
