--- a/posts/2018-05-19.md
+++ b/posts/2018-05-19.md
@@ -436,7 +436,7 @@ I should also stress that while the name itself is novel, TFLJ the algorithm is 
 
 Here is the rough idea:
 
-Imagine that someone provides us with a tuple `(r1, r2, p)` and asks for the list of `q` that should extend it. We have a few relations (`cfg`, `rla`, and `rla` again) that have opinions on which `q` should extend it, so let's maybe as them.
+Imagine that someone provides us with a tuple `(r1, r2, p)` and asks for the list of `q` that should extend it. We have a few relations (`cfg`, `rla`, and `rla` again) that have opinions on which `q` should extend it, so let's maybe ask them.
 
 Imagine each relation had a method
 
@@ -559,7 +559,7 @@ That is the whole `leapjoin_into` implementation!
 
 #### Other flavors of TreeFrog
 
-While one of the reasons for the three methods (`count`, `propose`, and `intersect`) is efficiency, another is flexibility. To see what this is about, let's consider an query fragment from Rust's "more optimized" version of their borrow checker logic.
+While one of the reasons for the three methods (`count`, `propose`, and `intersect`) is efficiency, another is flexibility. To see what this is about, let's consider an query fragment from Rust's ["more optimized" version](https://github.com/rust-lang-nursery/polonius/blob/master/src/output/datafrog_opt.rs#L164-L179) of their borrow checker logic.
 
     dead_region_requires(R, B, P, Q) :-
         requires(R, B, P),
@@ -604,6 +604,7 @@ We can grab and run the current version (which uses DataFrog, but not the treefr
 
 Before getting too excited, we should update `Cargo.toml` to point at the current [datafrog master](https://github.com/frankmcsherry/datafrog), which has [some recent improvements](https://github.com/frankmcsherry/datafrog/pull/2).
 
+    Echidnatron% nano Cargo.toml
     Echidnatron% cargo +nightly run --release -- -a DatafrogOpt inputs/clap-rs/app-parser-{{impl}}-add_defaults/ --skip-tuples
     ...
     Time: 6.985s
@@ -625,7 +626,8 @@ Now let's do a bit of editing in `datafrog_opt.rs`, which is where their logic l
             &mut region_live_at_rel.extend_anti(|&((r,_p),_b)| r),
         ],
         &dead_region_requires,  // destination
-        |&((r,p),b),&q| ((r,p,q),b));
+        |&((r,p),b),&q| ((r,p,q),b)
+    );
 ```
 
 instead of
@@ -651,6 +653,7 @@ instead of
 
 In any case, you also end up improving the time from 6.985 seconds to
 
+    Echidnatron% nano src/output/datafrog_opt.rs
     Echidnatron% cargo +nightly run --release -- -a DatafrogOpt inputs/clap-rs/app-parser-{{impl}}-add_defaults/ --skip-tuples
     ...
     Time: 5.275s
@@ -658,4 +661,4 @@ In any case, you also end up improving the time from 6.985 seconds to
 
 This isn't the world's greatest speed-up, but it is pretty solid. There are also several further avenues to explore, including better ways to perform intersection (right now we always use `gallop`) and replacing `Vec<&'a Val>` lists of pointers with just `Vec<Val>` because all of our `Val` types are just integers.
 
-For *our* purposes, we have learned a bit more about how to implement clever join strategies, while additionally supporting various flavors of negative constraints (though only in static relations, rather than variables).
+For *our* purposes, we have ideally learned a bit more about how to implement clever join strategies, while additionally supporting various flavors of negative constraints (though only in static relations, rather than variables).
